--- a/app/contact/contact.component.html
+++ b/app/contact/contact.component.html
@@ -1,5 +1,5 @@
-<div id="preheader" class="row">
-    <div class="small-7 column">
+<div id="banner" class="row">
+    <div  class="small-7 column">
         <h3>
             Moxie's Joint
         </h3>
@@ -23,7 +23,7 @@
     </nav>
 </div>
 
-<div id="header" class="row">
+<div id="contact" class="row">
     <h3 class="small-4 column">
         Contact
     </h3>
@@ -32,7 +32,7 @@
     </h3>
 </div>
 
-<div class="row">
+<div id="details" class="row">
     <div class="medium-6 column">
         <div class="card">
             <h3 class="card-divider">
@@ -65,7 +65,12 @@
     </div>
 </div>
 
-<div class="row">
-    <iframe allowfullscreen class="column" height="500" frameborder="0" style="border:0" src="//www.google.com/maps/embed/v1/place?key=AIzaSyBQ4EUaRYI6wgmXAdlmmgpXPKy9ty06mH8&q=Welcome+to+Moxie's+Joint+Cafe'+%26+Grille">
-    </iframe>
+<div id="map" class="row column">
+    <div class="card">
+        <h3 class="card-divider">
+            Map
+        </h3>
+    </div>
+    <iframe allowfullscreen class="row column" height="500" frameborder="0" style="border:0" src="//www.google.com/maps/embed/v1/place?key=AIzaSyBQ4EUaRYI6wgmXAdlmmgpXPKy9ty06mH8&q=Welcome+to+Moxie's+Joint+Cafe'+%26+Grille"></iframe>
 </div>
+
