--- a/app/contact/contact.component.html
+++ b/app/contact/contact.component.html
@@ -1,35 +1,37 @@
-<div id="banner" class="row">
-    <div  class="small-7 column">
-        <h3>
-            Moxie's Joint
-        </h3>
-        <h4>
-            Cafe' &amp; Grille
-       </h4>
-    </div>
-    <nav class="small-5 column">
-        <div class="row">
-            <div class="small-6 column">
-                <a class="button expanded" routerLink="/menu">
-                    Menu
-                </a>
-            </div>
-            <div class="small-6 column">
-                <a class="button expanded" routerLink="/contact">
-                    Contact
-                </a>
-            </div>
+<div [@dropDown]>
+    <div id="banner" class="row">
+        <div  class="small-7 column">
+            <h3>
+                Moxie's Joint
+            </h3>
+            <h4>
+                Cafe' &amp; Grille
+        </h4>
         </div>
-    </nav>
-</div>
+        <nav class="small-5 column">
+            <div class="row">
+                <div class="small-6 column">
+                    <a class="button expanded" routerLink="/menu">
+                        Menu
+                    </a>
+                </div>
+                <div class="small-6 column">
+                    <a class="button expanded" routerLink="/contact">
+                        Contact
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </div>
 
-<div id="contact" class="row">
-    <h3 class="small-4 column">
-        Contact
-    </h3>
-    <h3 class="small-8 column text-right">
-        813-978-9700 Ext. 7269
-    </h3>
+    <div id="contact" class="row">
+        <h3 class="small-4 column">
+            Contact
+        </h3>
+        <h3 class="small-8 column text-right">
+            813-978-9700 Ext. 7269
+        </h3>
+    </div>
 </div>
 
 <div id="details" class="row">
